# uav-sim

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
include/: bicycle.h  bicycle_ctrl_pid.h  controller.h  environment.h  fixed_wing.h  fixed_wing_base.h  fixed_wing_control.h  fixed_wing_trim.h  fw_ekf.h  fw_lqr.h  fw_p_lqr.h  gimbal.h  gmbl_ctrl_pid.h  gmbl_ekf.h  quad_control.h  quad_vi_ekf.h  quadrotor.h  quadrotor_common.h  sensors.h  vehicle.h  vehicle_common.h  vi_ekf_meas.h  vi_ekf_state.h  wgs84.h
include/ekf/: ekf.h
matlab/: R_from_q.m  animate_3d.m  animate_img.m  main.m  mocap_opt.m  numeric_derivatives.m  numerical_derivative_testing.m  plot_bicycle.m  plot_bicycle_commands.m  plot_bicycle_states.m  plot_commands.m  plot_ekf.m  plot_environment.m  plot_fw_ekf.m  plot_imu.m  plot_measurements.m  plot_quad_ekf.m  plot_results.m  plot_sensors.m  plot_states.m  plot_target_states.m  plot_vehicle.m  read_logs.m  sampson.m  symbolic_derivatives.m  thrust_surface.m  yaw_from_q.m
matlab/acc2019/: compute_relative.m  copy_binaries.m  lypunov_plot.m  pitch_from_q.m  plotting.m  read_logs.m
params/: bicycle1.yaml  ekf.yaml  fixed_wing1.yaml  gimbal.yaml  gimbal1.yaml  params.yaml  pb_vi_ekf_params.yaml  quadrotor1.yaml  sim.yaml  sim_gimbal.yaml
scripts/: animate_3d.m  animate_img.m  fw_monte_carlo.m  fw_monte_carlo.sh  main.m  monte_carlo_fw.sh  monte_carlo_fw_ekf.m  monte_carlo_fw_lqr.m  monte_carlo_pb_vi_ekf.m  monte_carlo_pb_vi_ekf.sh  monte_carlo_pb_vi_ekf_feats.m  plot_3D.m  plot_bicycle.m  plot_environment.m  plot_gimbal.m  plot_gimbal_ekf.m  plot_gmbl_ekf.m  plot_quad_ekf.m  plot_sensors.m  q_from_euler.m  thrust_surface.m
scripts/acc2019/: R_v1_to_v2.m  R_v2_to_b.m  Rq.m  compute_relative.m  read_logs.m  roll_from_q.m
src/: bicycle.cpp  bicycle_ctrl_pid.cpp  controller.cpp  environment.cpp  fixed_wing.cpp  fixed_wing_base.cpp  fixed_wing_control.cpp  fixed_wing_trim.cpp  fw_ekf.cpp  fw_ekf_test.cpp  fw_lqr.cpp  fw_p_lqr.cpp  gimbal.cpp  gmbl_ctrl_pid.cpp  gmbl_ekf.cpp  main.cpp  mocap_optimization.cpp  quad_control.cpp  quad_vi_ekf.cpp  quadrotor.cpp  sensors.cpp
src/ekf/: ekf.cpp  jacobians_test.cpp
test/: gmbl_ekf_test.cpp  simulation_gimbal.cpp
